# dnnl_issue

./: CMakeLists.txt  README.org
cmake/: FindDNNL.cmake
src/: CMakeLists.txt  example_utils.hpp  main.cpp
